--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
     git:
       url: https://github.com/koji-1009/kaigi_plugin_a_2021
       ref: main
+  kaigi_plugin_b_2021:
+    git:
+      url: https://github.com/koji-1009/kaigi_plugin_b_2021
+      ref: main
 
 dev_dependencies:
   flutter_test:
