--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   kaigi_plugin_a_2021:
     git:
       url: https://github.com/koji-1009/kaigi_plugin_a_2021
-      ref: main
+      ref: 1.0.0
   kaigi_plugin_b_2021:
     git:
       url: https://github.com/koji-1009/kaigi_plugin_b_2021
-      ref: main
+      ref: 1.0.0
 
 dev_dependencies:
   flutter_test:
